			SWI-Prolog ChangeLog
			====================

					--------------------------------------
					NOTE: Bug #<N> refers to bugs reported
					to the SWI-Prolog Bugzilla system at
					http://gollem.science.uva.nl/bugzilla/
					--------------------------------------

  * ADDED: Flag shared_object_search_path holding variable name for the
    searching .so/.dll files.

  * FIXED: Possible crash in current_prolog_flag(-, +).

  * MODIFIED: raised priority of | to 1105 to facilitate CHR.  Unlikely
    to cause problems.  If it does adjust code or use :- op(1100, xfy, (|)).
    Jon Sneyers.

  * FIXED: Instantiation error on :- [X].  Bart Demoen.

  * FIXED: Possible crash in file-name canonisation.  Roberto Bagnara.
    SECURITY: This is used by absolute_file_name/[2,3], which is adviced
    for path-name validation in web-servers.  Makes DoS attacks possible.
    Unclear whether or not the bug is exploitable aotherwise.

  * FIXED: Bug#233 Compilation error in single-threaded mode.  Keri Harris.

==================================
VERSION 5.6.23 (November 10, 2006)
==================================

  * PORT: Allow building 32-bit version on 64-bits Linux.

  * PORT: By default build shared object on x86_64-linux platforms.  Needed
    for embedding in Java and unlike IA32, creating a shared object does not
    affect performance.

  * ADDED: collation_key/2 and locale_sort/2 for locale-dependent ordering.
    With help from Pierre Nugues and Richard O'Keefe.

  * MODIFIED: Initialisation initialises the LC_COLLATE locale.

  * MODIFIED: Moved predsort/3, merge/3 and merge_set/3 to new library(sort).
    Applications not relying on autoloading must update use_module declarations
    if one of these predicates is used. 

  * ENHANCED: Check file-descriptor in Sfdopen(). Julien Olivain.

  * ADDED: debugger event for finished threads.

  * FIXED: Avoid history expansion on ..., !.  Kimberly Voll.

  * FIXED: negative shift.  Roberto Bagnara.
